@@ -17,7 +17,7 @@ namespace Verdant.Tiles
     public static class TileHelper
     {
         public static Vector2 TileOffset => Main.drawToScreen ? Vector2.Zero : new Vector2(Main.offScreenRange);
-        public static Vector2 TileCustomPosition(int i, int j, Vector2? off = null) => (new Vector2(i, j)  * 16) - Main.screenPosition - (off ?? new Vector2(0)) + TileOffset;
+        public static Vector2 TileCustomPosition(int i, int j, Vector2 off = default) => (new Vector2(i, j) * 16) - Main.screenPosition - off + TileOffset;
 
         public static int[] AttachStrongVine
         {
